fix the icon alignment in Add Ingestion button

--- a/openmetadata-ui/src/main/resources/ui/src/styles/app.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/app.less
@@ -76,6 +76,16 @@
 .text-underline {
   text-decoration: underline;
 }
+
+//  Radius
+
+.rounded {
+  border-radius: 4px;
+}
+.rounded-full {
+  border-radius: 9999px;
+}
+
 // Width
 .w-4 {
   width: 16px;
@@ -232,10 +242,6 @@
 }
 .border-gray {
   border-color: @gray;
-}
-
-.rounded-full {
-  border-radius: 9999px;
 }
 
 .bg-primary-lite {
